@@ -1,3 +1,8 @@
+2003-03-05  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/getaddrinfo.c: Allow getaddrinfo() to use DNS gethostbyXXX()
+	routines if DNS is present.  Also, eliminate some debug messages.
+
 2003-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/getserv.c: Added a servent structure for SNTP.
